--- a/flask/Coding/templates/base.html
+++ b/flask/Coding/templates/base.html
@@ -1,3 +1,5 @@
+{% import "macro/forms.html" as cm with context %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +15,7 @@
   <!-- Material Design Bootstrap -->
   <link href="{{ url_for('static', filename='css/mdb.min.css')}}" rel="stylesheet">
   <!-- Your custom styles (optional) -->
-  <!-- <link href="{{ url_for('static', filename='css/style.min.css')}}" rel="stylesheet"> -->
+  <link href="{{ url_for('static', filename='css/style.min.css')}}" rel="stylesheet">
   <style type="text/css">
     html,
     body,
@@ -77,7 +79,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/" target="_blank">Create</a>
+            <a class="nav-link" href="http://localhost:5000/create">Create</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank">Editor</a>
@@ -89,7 +91,10 @@
 
         <!-- Right -->
         <ul class="navbar-nav nav-flex-icons">
-          <li class="nav-item">
+          
+          <!-- TODO: Gonna add user's information -->
+
+          <!-- <li class="nav-item">
             <a href="https://www.facebook.com/mdbootstrap" class="nav-link" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
@@ -104,7 +109,7 @@
               target="_blank">
               <i class="fab fa-github mr-2"></i>MDB GitHub
             </a>
-          </li>
+          </li> -->
         </ul>
 
       </div>
@@ -112,156 +117,8 @@
     </div>
   </nav>
   <!-- Navbar -->
-
-  <!-- Full Page Intro -->
-  <div class="view full-page-intro" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/78.jpg'); background-repeat: no-repeat; background-size: cover;">
-
-    <!-- Mask & flexbox options-->
-    <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-
-      <!-- Content -->
-      <div class="container">
-
-        <!--Grid row-->
-        <div class="row wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-md-6 mb-4 white-text text-center text-md-left">
-
-            <h1 class="display-4 font-weight-bold">Make your own development environment</h1>
-
-            <hr class="hr-light">
-
-            <p>
-              <strong>Without using your computer resources</strong>
-            </p>
-
-            <p class="mb-4 d-none d-md-block">
-              <strong>You are able to run your code in this website. You can share your own environment with your colleague or students. Create your own code and make your own development environment.</strong>
-            </p>
-
-            <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-indigo btn-lg">Start Coding
-              <i class="fas fa-graduation-cap ml-2"></i>
-            </a>
-
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-md-6 col-xl-5 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card content-->
-              <div class="card-body">
-
-                <!-- Form -->
-                <!-- <form name="">
-                  <h3 class="dark-grey-text text-center">
-                    <strong>Write to us:</strong>
-                  </h3>
-                  <hr>
-
-                  <div class="md-form">
-                    <i class="fas fa-user prefix grey-text"></i>
-                    <input type="text" id="form3" class="form-control">
-                    <label for="form3">Your name</label>
-                  </div>
-                  <div class="md-form">
-                    <i class="fas fa-envelope prefix grey-text"></i>
-                    <input type="text" id="form2" class="form-control">
-                    <label for="form2">Your email</label>
-                  </div>
-
-                  <div class="md-form">
-                    <i class="fas fa-pencil-alt prefix grey-text"></i>
-                    <textarea type="text" id="form8" class="md-textarea"></textarea>
-                    <label for="form8">Your message</label>
-                  </div>
-
-                  <div class="text-center">
-                    <button class="btn btn-indigo">Send</button>
-                    <hr>
-                    <fieldset class="form-check">
-                      <input type="checkbox" class="form-check-input" id="checkbox1">
-                      <label for="checkbox1" class="form-check-label dark-grey-text">Subscribe me to the newsletter</label>
-                    </fieldset>
-                  </div>
-                </form> -->
-                <!-- Form -->
-                <!-- Default form login -->
-                <form class="text-center border border-light p-5" action="#!">
-
-                  <p class="h4 mb-4">Sign in</p>
-
-                  <!-- Email -->
-                  <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
-
-                  <!-- Password -->
-                  <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
-
-                  <div class="d-flex justify-content-around">
-                      <div>
-                          <!-- Remember me -->
-                          <div class="custom-control custom-checkbox">
-                              <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                              <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                          </div>
-                      </div>
-                      <div>
-                          <!-- Forgot password -->
-                          <a href="">Forgot password?</a>
-                      </div>
-                  </div>
-
-                  <!-- Sign in button -->
-                  <button class="btn btn-info btn-block my-4" type="submit">Sign in</button>
-
-                  <!-- Register -->
-                  <p>Not a member?
-                      <a href="http://localhost:5000/register">Register</a>
-                  </p>
-
-                  <!-- Social login -->
-                  <p>or sign in with:</p>
-
-                  <a href="#" class="mx-2" role="button"><i class="fab fa-facebook-f light-blue-text"></i></a>
-                  <a href="#" class="mx-2" role="button"><i class="fab fa-twitter light-blue-text"></i></a>
-                  <a href="#" class="mx-2" role="button"><i class="fab fa-linkedin-in light-blue-text"></i></a>
-                  <a href="#" class="mx-2" role="button"><i class="fab fa-github light-blue-text"></i></a>
-
-                </form>
-                <!-- Default form login -->
-
-              </div>
-
-            </div>
-            <!--/.Card-->
-
-          </div>
-          <!--Grid column-->
-
-        </div>
-        <!--Grid row-->
-
-      </div>
-      <!-- Content -->
-
-    </div>
-    <!-- Mask & flexbox options-->
-
-  </div>
-  <!-- Full Page Intro -->
-
-  <!--Main layout-->
-  <main>
-    <div class="container">
-        {% block main %}
-        {% endblock %}
-    </div>
-  </main>
-  <!--Main layout-->
+  {% block main %}
+  {% endblock %}  
 
   <!--Footer-->
   <footer class="page-footer text-center font-small mt-4 wow fadeIn">
@@ -323,6 +180,11 @@
     <!--/.Copyright-->
 
   </footer>
+
+  {% call cm.modal('id', 'Sign up') %}
+    <h5>You have registered successfully</h5>
+  {% endcall %}
+
   <!--/.Footer-->
 
   <!-- SCRIPTS -->
@@ -345,10 +207,14 @@
     function closeModal(modalId){
         $('#' + modalId).modal('hide');
     }
+    
     //<button type="button" onclick="openModal('modalId')" class="btn btn-primary">Open Modal </button>
     
 
   </script>
+  <!-- function register() {
+    document.getElementById("").innerHTML = ""
+  } -->
 </body>
 
 </html>
