--- a/flask/Coding/templates/login.html
+++ b/flask/Coding/templates/login.html
@@ -168,7 +168,7 @@
                       <a href="" target="_blank">terms of service</a>
               
                 </form>
-                <p id="msg" style="text-align: center; display: none;">반갑습니다. 김동환님</p>
+                <p id="msg" style="text-align: center; display: none;">반갑습니다. {{username}}님</p>
                 <p id="err" style="text-align: center; display: none;">로그인 실패</p>
                 <!-- Default form login -->
                 
