--- a/flask/Coding/templates/editor.html
+++ b/flask/Coding/templates/editor.html
@@ -10,8 +10,8 @@ It shows the list of codes that users have -->
     <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
         <div class="container">
             <div class="row wow fadeIn">
-                <h1>Here is for create your own environment</h1>
-                
+                <h1>Here is for creating your own environment</h1>
+                <p>You are on {{os}} and able to use {{language}}</p>
             </div>
         </div>
     </div>
